added tests, routes and updated models
