# models/models.js
@@ -1,4 +1,4 @@
-const {STRING,TEXT,UUID,UUIDV4,INTEGER,DATE,Model}=require("sequelize");
+const {STRING,TEXT,UUID,UUIDV4,INTEGER,DATE,Model,ENUM,DataTypes}=require("sequelize");
 
 const {sequelize}=require('../database');
 const book={
@@ -37,13 +37,121 @@ const book={
     }
 };
 
+const  loans={
+    id:{
+        type: UUID,
+        primaryKey:true,
+        defaultValue: UUIDV4
+    },
+    username: {
+        type: STRING,
+        allowNull: false
+    },
+    bookid:{
+        type: INTEGER,
+        allowNull: false
+    },
+   title:{
+    type: STRING,
+    allowNull: false
+   },
+   date:{
+    type: DATE,
+    allowNull: false,
+    defaultValue: new Date()
+   },
+   period:{
+    type: INTEGER,
+    allowNull: false,
+    defaultValue: 1
+   },
+   isActive:{
+    type: DataTypes.BOOLEAN,
+    allowNull: false,
+    defaultValue: false
+   }
+}
+class Loans extends Model{};
+Loans.init(loans,{
+    sequelize,
+    modelName: "loans",
+    timestamps: "true",
+});
+sequelize.sync(Loans);
+const users={
+    id:{
+        type: UUID,
+        primaryKey:true,
+        defaultValue: UUIDV4
+    },
+    username:{
+        type: STRING,
+        unique: true,
+        allowNull: false
+    },
+    firstName:{
+        type: STRING,
+        allowNull: false
+    },
+    lastName:{
+        type: STRING,
+        allowNull: false
+    },
+    email:{
+        type: STRING,
+        allowNull: false
+    },
+    role:{
+        type: ENUM({
+            values:["student","staff","admin"]
+        }),
+        allowNull: false,
+        
+    },
+    address:{
+        type: STRING,
+        allowNull: false
+    },
+    password:{
+        type: STRING,
+        allowNull: false
+    },
+    phone:{
+        type: STRING,
+        allowNull: false
+    },
+    loans:{
+        type: DataTypes.ARRAY(Loans),
+        allowNull: true,
+        defaultValue:[]
+    }
+}
+
+
+
 class Books extends Model{};
 Books.init(book,{
     sequelize,
     modelName: "books",
     timestamps: "true",
 });
+class Users extends Model{};
+
+Users.init(users,{
+    sequelize,
+    modelName: "users",
+    timestamps: "true",
+});
+
+
+
+// Users.hasMany(Loans,{
+//     foreignKey:"id",
+//     onDelete:"CASCADE"
+// });
 
 sequelize.sync(Books);
+sequelize.sync(Users);
+
 console.log("models");
-module.exports={Books};
+module.exports={Books,Users,Loans};
